// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should render correctly image 1`] = `
<div>
  <div
    class="panel"
  >
    <div
      class="title"
    >
      OPTIONS
    </div>
    <dummy-image-options
      elem="[object HTMLImageElement]"
    />
  </div>
</div>
`;

exports[`should render correctly in mobile image 1`] = `
<div>
  <div
    class="container"
  >
    <mock-object-panel-divider />
    <dummy-image-options
      elem="[object HTMLImageElement]"
    />
  </div>
</div>
`;

exports[`should render correctly in mobile no element 1`] = `
<div>
  <div
    class="container"
  >
    <mock-object-panel-divider />
  </div>
</div>
`;

exports[`should render correctly in mobile others 1`] = `
<div>
  <div
    class="container"
  >
    <mock-object-panel-divider />
    <dummy-infill-block
      elems="[object HTMLUnknownElement]"
    />
  </div>
</div>
`;

exports[`should render correctly in mobile polygon desktop version 1`] = `
<div>
  <div
    class="container"
  >
    <mock-object-panel-divider />
    <dummy-color-panel
      elem="[object HTMLUnknownElement]"
    />
    <dummy-polygon-options
      elem="[object HTMLUnknownElement]"
    />
  </div>
</div>
`;

exports[`should render correctly in mobile polygon web version 1`] = `
<div>
  <div
    class="container"
  >
    <mock-object-panel-divider />
    <dummy-color-panel
      elem="[object HTMLUnknownElement]"
    />
    <dummy-polygon-options
      elem="[object HTMLUnknownElement]"
    />
  </div>
</div>
`;

exports[`should render correctly in mobile rect 1`] = `
<div>
  <div
    class="container"
  >
    <mock-object-panel-divider />
    <dummy-color-panel
      elem="[object HTMLUnknownElement]"
    />
    <dummy-rect-options
      elem="[object HTMLUnknownElement]"
    />
  </div>
</div>
`;

exports[`should render correctly in mobile text 1`] = `
<div>
  <div
    class="container"
  >
    <mock-object-panel-divider />
    <dummy-color-panel
      elem="[object HTMLUnknownElement]"
    />
    <dummy-text-options
      elem="[object HTMLUnknownElement]"
      showcolorpanel="configName"
      textelements="[object HTMLUnknownElement]"
    />
  </div>
</div>
`;

exports[`should render correctly no element 1`] = `<div />`;

exports[`should render correctly others 1`] = `
<div>
  <div
    class="panel"
  >
    <div
      class="title"
    >
      OPTIONS
    </div>
    <dummy-infill-block
      elems="[object HTMLUnknownElement]"
    />
  </div>
</div>
`;

exports[`should render correctly polygon desktop version 1`] = `
<div>
  <div
    class="panel"
  >
    <div
      class="title"
    >
      OPTIONS
    </div>
    <dummy-polygon-options
      elem="[object HTMLUnknownElement]"
    />
    <dummy-color-panel
      elem="[object HTMLUnknownElement]"
    />
  </div>
</div>
`;

exports[`should render correctly polygon web version 1`] = `
<div>
  <div
    class="panel"
  >
    <div
      class="title"
    >
      OPTIONS
    </div>
    <dummy-polygon-options
      elem="[object HTMLUnknownElement]"
    />
    <dummy-color-panel
      elem="[object HTMLUnknownElement]"
    />
  </div>
</div>
`;

exports[`should render correctly rect 1`] = `
<div>
  <div
    class="panel"
  >
    <div
      class="title"
    >
      OPTIONS
    </div>
    <dummy-rect-options
      elem="[object HTMLUnknownElement]"
    />
    <dummy-color-panel
      elem="[object HTMLUnknownElement]"
    />
  </div>
</div>
`;

exports[`should render correctly rect in full color layer 1`] = `
<div>
  <div
    class="panel"
  >
    <div
      class="title"
    >
      OPTIONS
    </div>
    <dummy-rect-options
      elem="[object HTMLUnknownElement]"
    />
    <dummy-color-panel
      elem="[object HTMLUnknownElement]"
    />
  </div>
</div>
`;

exports[`should render correctly text 1`] = `
<div>
  <div
    class="panel"
  >
    <div
      class="title"
    >
      OPTIONS
    </div>
    <dummy-text-options
      elem="[object HTMLUnknownElement]"
      showcolorpanel="configName"
      textelements="[object HTMLUnknownElement]"
    />
    <dummy-color-panel
      elem="[object HTMLUnknownElement]"
    />
  </div>
</div>
`;

exports[`should render correctly use with variable data 1`] = `
<div>
  <div
    class="panel"
  >
    <div
      class="title"
    >
      OPTIONS
    </div>
    <dummy-multi-color-options
      elem="[object HTMLUnknownElement]"
    />
    <dummy-variable-text-block
      elems="[object HTMLUnknownElement]"
      id="use"
      withdivider="configName"
    />
  </div>
</div>
`;

exports[`should render correctly use without variable data 1`] = `
<div>
  <div
    class="panel"
  >
    <div
      class="title"
    >
      OPTIONS
    </div>
    <dummy-multi-color-options
      elem="[object HTMLUnknownElement]"
    />
  </div>
</div>
`;
